--- a/src/app/dashboard/components/employee-form/employee-form.component.html
+++ b/src/app/dashboard/components/employee-form/employee-form.component.html
@@ -1,5 +1,6 @@
 <div class="card">
   <div class="card-header">
+    <span class="spinner-border spinner-border-sm" role="status" aria-hidden="true" *ngIf="isfetching"></span>
     Add New Employee
   </div>
   <div class="card-body">
@@ -39,7 +40,10 @@
         <input type="file" class="form-control" formControlName="profile_image">
       </div>
       <div class="d-grid gap-2 col-6 mx-auto">
-        <button class="btn btn-primary" type="submit" [disabled]="!employeeFormGroup.valid">{{isUpdate ? 'Update': 'Save'}}</button>
+        <button class="btn btn-primary" type="submit" [disabled]="!employeeFormGroup.valid">
+          <span class="spinner-border spinner-border-sm" role="status" aria-hidden="true" *ngIf="loading"></span>
+          {{isUpdate ? 'Update': 'Save'}}
+        </button>
       </div>
     </form>
   </div>
