--- a/src/app/dashboard/pages/dashboard.component.html
+++ b/src/app/dashboard/pages/dashboard.component.html
@@ -4,7 +4,7 @@
   </div>
   <div class="row" style="height: 95%">
     <div class="col" style="height: 95%">
-      <app-employee-list [employeeslist]="employees"></app-employee-list>
+      <app-employee-list [employeeslist]="employees" [fetching]="loading"></app-employee-list>
     </div>
     <div class="col">
       <app-employee-form></app-employee-form>
