--- a/src/app/dashboard/components/employee-form/employee-form.component.html
+++ b/src/app/dashboard/components/employee-form/employee-form.component.html
@@ -8,30 +8,30 @@
       <div class="mb-3">
         <label class="form-label">Full name</label>
         <input type="text" class="form-control" formControlName="employee_name" placeholder="Enter employee name" required>
-        <div class="py-1 alert alert-danger d-flex align-items-center my-1"
-             *ngIf="employee_name?.touched && employee_name?.invalid">Please enter full name.
+        <div class="py-1 alert alert-danger d-flex align-items-center my-2"
+             *ngIf="employee_name?.touched && employee_name?.pristine && employee_name?.invalid">Please enter full name.
         </div>
-        <div class="py-1 alert alert-danger d-flex align-items-center my-1" *ngIf="employee_name?.errors?.minlength"
+        <div class="py-1 alert alert-danger d-flex align-items-center my-2" *ngIf="employee_name?.errors?.minlength"
         >Full name should not be less than 5 letters.
         </div>
       </div>
       <div class="mb-3">
         <label class="form-label">Salary</label>
         <input type="number" class="form-control" formControlName="employee_salary" placeholder="Enter emplyoee salary" required>
-        <div class="py-1 alert alert-danger d-flex align-items-center my-1"
-             *ngIf="employee_salary?.touched && employee_salary?.invalid">Please enter salary.
+        <div class="py-1 alert alert-danger d-flex align-items-center my-2"
+             *ngIf="employee_salary?.touched && employee_salary?.pristine && employee_name?.invalid">Please enter salary.
         </div>
-        <div class="py-1 alert alert-danger d-flex align-items-center my-1" *ngIf="employee_salary?.errors?.min">
+        <div class="py-1 alert alert-danger d-flex align-items-center my-2" *ngIf="employee_salary?.errors?.min">
           Salary should not be less than $10,000
         </div>
       </div>
       <div class="mb-3">
         <label class="form-label">Age</label>
         <input type="number" class="form-control" formControlName="employee_age" placeholder="Enter employee age" required>
-        <div class="py-1 alert alert-danger d-flex align-items-center my-1"
-             *ngIf="employee_age?.touched && employee_age?.invalid">Please enter age
+        <div class="py-1 alert alert-danger d-flex align-items-center my-2"
+             *ngIf="employee_age?.touched && employee_age?.pristine && employee_name?.invalid">Please enter age
         </div>
-        <div class="py-1 alert alert-danger d-flex align-items-center  my-1" *ngIf="employee_age?.errors?.min || employee_age?.errors?.max">
+        <div class="py-1 alert alert-danger d-flex align-items-center  my-2" *ngIf="employee_age?.errors?.min || employee_age?.errors?.max">
           Age should not be between 20-80
         </div>
       </div>
