--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,4 @@
-<div class="container-fluid p-0 m-0">
+<div class="container-fluid p-0 m-0 main">
   <nav>
     <app-navbar></app-navbar>
   </nav>
@@ -8,5 +8,20 @@
   <footer>
     <app-footer></app-footer>
   </footer>
+
+  <div class="position-fixed bottom-0 right-0 left-0 w-100 d-flex justify-content-end text-white">
+    <div class="p-3" style="z-index: 5">
+      <div id="liveToast" class="toast hide" role="alert" aria-live="assertive" aria-atomic="true"
+           [style]="{'background-color': toastMessage?.type === 'success' ? 'green' : 'warning' ? 'orange' : 'red'}">
+        <div class="toast-header">
+          <strong class="me-auto">{{toastMessage?.title || ''}}</strong>
+          <button type="button" class="btn-close" data-bs-dismiss="toast" aria-label="Close"></button>
+        </div>
+        <div class="toast-body">
+          {{toastMessage?.message || ''}}
+        </div>
+      </div>
+    </div>
+  </div>
 </div>
 
