add icons forms

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,17 +2,18 @@
   <nav>
     <app-navbar></app-navbar>
   </nav>
-  <main class="custom-container">
+  <main class="container-fluid">
     <router-outlet></router-outlet>
   </main>
   <footer>
     <app-footer></app-footer>
   </footer>
 
+<!--  code snippert of toaster-->
   <div class="position-fixed bottom-0 right-0 left-0 w-100 d-flex justify-content-end text-white">
     <div class="p-3" style="z-index: 5">
       <div id="liveToast" class="toast hide" role="alert" aria-live="assertive" aria-atomic="true"
-           [style]="{'background-color': toastMessage?.type === 'success' ? 'green' : 'warning' ? 'orange' : 'red'}">
+           [style]="{'background-color': toastMessage?.type === 'success' ? 'green' : toastMessage?.type === 'warning' ? 'orange' : 'red'}">
         <div class="toast-header">
           <strong class="me-auto">{{toastMessage?.title || ''}}</strong>
           <button type="button" class="btn-close" data-bs-dismiss="toast" aria-label="Close"></button>
