--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -1,1 +1,1 @@
-<p class="text-sm-center fs-6 fw-light">© Copyright 2019. All rights reserved to {{title}}.</p>
+<p class="footer-text text-center fs-6 fw-light">© Copyright 2019. All rights reserved to {{title}}.</p>
