--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -1,5 +1,7 @@
-<div class="navbar navbar-light bg-light">
+<div class="navbar">
   <div class="container-fluid">
-    <p class="m-0 px-3 text-lg-start text-decoration-none text-dark title" routerLink="/">{{title}}</p>
+    <a
+      class="m-0 px-3 w-100 text-end text-decoration-none text-light title"
+      routerLink="/">{{title}}</a>
   </div>
 </div>
