--- a/src/app/trash/trash.component.html
+++ b/src/app/trash/trash.component.html
@@ -1,26 +1,32 @@
 <div class="container h-100">
   <div class="row justify-content-between">
-    <span class="col"><h3>Trash</h3></span>
     <div class="col d-flex justify-content-end">
-      <button (click)="clearAll()" class="m-2 btn btn-dark">Clear All</button>
-      <button routerLink="/" class="m-2 btn btn-dark">Dashboard</button>
+      <button (click)="clearAll()" class="m-2 btn btn-outline-dark d-flex justify-content-center align-items-center">
+        <img src="assets/icons/cancel.svg" width="18"/> &nbsp;Clear All
+      </button>
     </div>
   </div>
-  <div class="card overflow-scroll h-100">
+  <div class="card overflow-scroll h-90">
+    <div class="card-header">
+      Trash
+    </div>
     <ul class="list-group list-group-flush">
-      <li class="list-group-item d-flex justify-content-between bg-dark text-white">
-        <span class="w-25 text-center">Id</span>
-        <span class="w-25 text-center">Name</span>
-        <span class="w-25 text-center">Salary</span>
-        <span class="w-25 text-center">Age</span>
+      <li class="list-group-item d-flex justify-content-between row">
+        <span class="col text-end">Id</span>
+        <span class="col text-end">Name</span>
+        <span class="col text-end">Salary</span>
+        <span class="col text-end">Age</span>
       </li>
     </ul>
-    <ul class="list-group list-group-flush overflow-scroll" style="height: 95%">
-      <li class="list-group-item d-flex justify-content-between" *ngFor="let emp of trashItems| sort:'id'">
-        <span class="w-25 text-center">{{emp.id}}</span>
-        <span class="w-25 text-center">{{emp.profile_image}} {{emp.employee_name}}</span>
-        <span class="w-25 text-center">{{emp.employee_salary | currency:'USD':'symbol' : '1.0-0'}}</span>
-        <span class="w-25 text-center">{{emp.employee_age}}</span>
+    <div *ngIf="trashItems.length === 0" class="h-100 d-flex justify-content-center align-items-center text-muted">
+      <h1>No Trash</h1>
+    </div>
+    <ul class="list-group list-group-flush overflow-scroll" style="height: 95%" *ngIf="trashItems.length > 0">
+      <li class="list-group-item d-flex justify-content-between row" *ngFor="let emp of trashItems| sort:'id'">
+        <span class="col text-end">{{emp.id}}</span>
+        <span class="col text-end">{{emp.employee_name}}</span>
+        <span class="col text-end">{{emp.employee_salary | currency:'USD':'symbol' : '1.0-0'}}</span>
+        <span class="col text-end">{{emp.employee_age}}</span>
       </li>
     </ul>
   </div>
