add lazy loading and multi modules

--- a/src/app/modules/dashboard/pages/dashboard.component.html
+++ b/src/app/modules/dashboard/pages/dashboard.component.html
@@ -2,7 +2,7 @@
   <div class="row mt-3 justify-content-end">
     <button routerLink="/trash"
             class="m-2 col-xxl-1 col-xl-1 col-lg-1 col-md-2 col-4 btn btn-outline-dark d-flex justify-content-center align-items-center">
-      <img src="assets/icons/delete.svg" width="18"/> &nbsp;Trash
+      <img src="../../../../assets/icons/delete.svg" width="18"/> &nbsp;Trash
     </button>
   </div>
   <div class="row" style="height: 95%">
