--- a/src/app/modules/trash/trash.component.html
+++ b/src/app/modules/trash/trash.component.html
@@ -2,7 +2,7 @@
   <div class="row justify-content-between">
     <div class="col d-flex justify-content-end">
       <button (click)="clearAll()" class="m-2 btn btn-outline-dark d-flex justify-content-center align-items-center">
-        <img src="assets/icons/cancel.svg" width="18"/> &nbsp;Clear All
+        <img src="../../../assets/icons/cancel.svg" width="18"/> &nbsp;Clear All
       </button>
     </div>
   </div>
