--- a/src/app/modules/dashboard/components/employee-list/employee-list.component.html
+++ b/src/app/modules/dashboard/components/employee-list/employee-list.component.html
@@ -26,7 +26,7 @@
         <span class="col-3 text-start">
         <button (click)="onEdit(emp)"
                 class="mx-1 btn btn-warning"> <img
-          src="assets/icons/edit.svg" width="18" style="color:white"/></button>
+          src="../../../../../assets/icons/edit.svg" width="18" style="color:white"/></button>
         <button (click)="onRemove(emp)" class="mx-1 btn btn-danger">
           <span *ngIf="!(loading && selectedToDelete && emp.id === selectedToDelete.id)">X</span>
           <span class="spinner-border spinner-border-sm" role="status" aria-hidden="true"
