--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,5 @@
 /* You can add global styles to this file, and also import other style files */
+@import "styles/abstracts/variables";
+@import "styles/abstracts/functions";
+@import "styles/abstracts/mixins";
+@import "styles/abstracts/placeholders";
